# shadowseek

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  crawl.rs  document.rs  error.rs  lib.rs  pipeline.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: lib.rs  shingling.rs
crates/index/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
src/: main.rs
